# odoo-xmlrpc-wrapper

./: CHANGES.txt  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
src/: __init__.py
src/odoo_xmlrpc_wrapper/: __init__.py  odoo_xmlrpc_wrapper.py
src/odoo_xmlrpc_wrapper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  test_odoo_xmlrpc_wapper.py
