[metadata]
name = odoo_xmlrpc_wrapper
version = 1.1.1
author = Cagatay URESIN
author_email = cagatayuresin@gmail.com
description = A simple Python library to make CRUD process easier
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cagatayuresin/odoo-xmlrpc-wrapper
project_urls =
    Bug Tracker = https://github.com/cagatayuresin/odoo-xmlrpc-wrapper/-/issues
    repository = https://github.com/cagatayuresin/odoo-xmlrpc-wrapper
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: Odoo
    Framework :: Odoo :: 16.0
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Freeware
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Topic :: Office/Business
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src